# talktojson

./: README.md  config.py  main.py  main.py_bad_search  main.py_frozen  main_unstable.py  pyproject.toml  requirements.txt  streamlit_app.py  бывший_uv.lock##
attached_assets/: docs2json_database_maker.py  talk2json_bot.py
data/: index.pkl  knowledge_base.json  test_knowledge_base.json
documents/: ГК часть 1.txt  О концессионных соглашениях.txt  О правилах заключения договоров коммунальных услуг 124.txt  О техприсоединении 2115.txt  О требованиях к схемам теплоснабжения 154.txt  О ценовом регулировании 1075.txt  О ценообразовании в ЦЗТ 860.txt  Правила 354.txt  Правила 808.txt  Правила установления норматива 306.txt  Правила эксплуатации тепловых энергоустановок 115.txt  ФЗ о защите конкуренции.txt  ФЗ о теплоснабжении.txt  о коммерческом учете теплоносителя 1034.txt  типовые правила охраны тепловых сетей.txt
